--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# alembic==1.14.0
+alembic==1.14.0
 # annotated-types==0.7.0
 # anyio==4.6.0
 # asyncpg==0.30.0
@@ -30,7 +30,7 @@ fastapi==0.115.0
 # shellingham==1.5.4
 # sniffio==1.3.1
 # SQLAlchemy==2.0.36
-# sqlmodel==0.0.22
+sqlmodel==0.0.22
 # starlette==0.38.5
 # typer==0.12.5
 # typing_extensions==4.12.2
