--- a/requirements.txt
+++ b/requirements.txt
@@ -39,9 +39,10 @@ uvicorn==0.30.6
 # watchfiles==0.24.0
 # websockets==13.0.1
 # shortuuid==1.0.13
-# passlib==1.7.4
+passlib==1.7.4
 # bcrypt==4.2.1
 # pydantic-settings==2.6.1
 # PyJWT==2.10.1
 # Faker==33.1.0
 # pytest==8.3.4
+jose==1.0.0
