--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ uvicorn==0.30.6
 # shortuuid==1.0.13
 passlib==1.7.4
 # bcrypt==4.2.1
-# pydantic-settings==2.6.1
+pydantic-settings==2.6.1
 # PyJWT==2.10.1
 # Faker==33.1.0
 # pytest==8.3.4
