--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alembic==1.14.0
 # annotated-types==0.7.0
-# anyio==4.6.0
+anyio==4.9.0
 # asyncpg==0.30.0
 # certifi==2024.8.30
 # click==8.1.7
@@ -43,8 +43,8 @@ passlib==1.7.4
 # bcrypt==4.2.1
 pydantic-settings==2.6.1
 # PyJWT==2.10.1
-# Faker==33.1.0
-# pytest==8.3.4
+Faker==37.1.0
+pytest==8.3.4
 #jose==1.0.0
 python-jose==3.4.0
 bcrypt==4.3.0
